--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="icon" type="image" href="#">
 </head>
 <body>
-  <header>
+  <header class="header">
+    <div>
+        
+    </div>
   </header>
   <footer>
   </footer>
